--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -19,7 +19,9 @@
       items:
         - name: Modifiche che causano un'interruzione
           href: fx-core.md
-        - name: API che generano eccezioni in modo esplicito
+        - name: Tecnologie non disponibili
+          href: ../porting/net-framework-tech-unavailable.md?toc=/dotnet/core/compatibility/toc.json&bc=/dotnet/breadcrumb/toc.json
+        - name: API che generano sempre eccezioni
           href: unsupported-apis.md
 - name: Per area
   expanded: true
