--- a/docs/csharp/toc.yml
+++ b/docs/csharp/toc.yml
@@ -1358,14 +1358,14 @@
               href: language-reference/keywords/var.md
             - name: Tipi non gestiti
               href: language-reference/builtin-types/unmanaged-types.md
+            - name: Valori predefiniti
+              href: language-reference/builtin-types/default-values.md
             - name: Tabelle di riferimento per i tipi
               items:
                 - name: Tabella dei tipi incorporati
                   href: language-reference/keywords/built-in-types-table.md
                 - name: Tabella dei tipi valore
                   href: language-reference/keywords/value-types-table.md
-                - name: Tabella dei valori predefiniti
-                  href: language-reference/keywords/default-values-table.md
                 - name: Tabella di formattazione dei risultati numerici
                   href: language-reference/keywords/formatting-numeric-results-table.md
         - name: Modificatori
