--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -33,7 +33,7 @@
     - name: Crittografia
       href: cryptography.md
     - name: Entity Framework Core
-      href: /ef/core/what-is-new/ef-core-3.0/breaking-changes
+      href: /ef/core/what-is-new/ef-core-3.0/breaking-changes?toc=/dotnet/core/compatibility/toc.json&bc=/dotnet/breadcrumb/toc.json
     - name: Globalizzazione
       href: globalization.md
     - name: Rete
