--- a/docs/whats-new/toc.yml
+++ b/docs/whats-new/toc.yml
@@ -2,8 +2,9 @@
   href: index.yml
   expanded: true
   items:
+    - name: 2020 - Gennaio
+      href: dotnet-2020-01.md
     - name: 2019
-      expanded: true
       items:
         - name: Dicembre
           href: 2019-12.md
