--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -36,6 +36,8 @@
       href: /ef/core/what-is-new/ef-core-3.0/breaking-changes?toc=/dotnet/core/compatibility/toc.json&bc=/dotnet/breadcrumb/toc.json
     - name: Globalizzazione
       href: globalization.md
+    - name: MSBuild
+      href: msbuild.md
     - name: Rete
       href: networking.md
     - name: Visual Basic
