--- a/docs/core/toc.yml
+++ b/docs/core/toc.yml
@@ -111,6 +111,18 @@
           href: tutorials/cli-templates-create-project-template.md
         - name: 3 - Creare un pacchetto modello
           href: tutorials/cli-templates-create-template-pack.md
+- name: SDK per i progetti
+  items:
+    - name: Panoramica
+      href: project-sdk/overview.md
+    - name: Riferimento
+      items:
+        - name: Microsoft.NET.Sdk
+          href: project-sdk/msbuild-props.md
+        - name: Microsoft.NET.Sdk.Web
+          href: /aspnet/core/razor-pages/web-sdk?toc=/dotnet/core/toc.json&bc=/dotnet/breadcrumb/toc.json
+        - name: Microsoft.NET.Sdk.Razor
+          href: /aspnet/core/razor-pages/sdk?toc=/dotnet/core/toc.json&bc=/dotnet/breadcrumb/toc.json
 - name: Configurazione del runtime
   items:
     - name: Impostazioni
