--- a/docs/csharp/tutorials/intro-to-csharp/numbers-in-csharp.yml
+++ b/docs/csharp/tutorials/intro-to-csharp/numbers-in-csharp.yml
@@ -11,12 +11,12 @@ metadata:
   nextTutorialTitle: Rami e cicli in C#
   displayType: two-column
   interactive: csharp
-  ms.openlocfilehash: b417ba7ff340019c74b0c3430242f59d6217b07f
-  ms.sourcegitcommit: f348c84443380a1959294cdf12babcb804cfa987
+  ms.openlocfilehash: 48268c6e839ae4f72aae0e872c837b153325b68b
+  ms.sourcegitcommit: f38e527623883b92010cf4760246203073e12898
   ms.translationtype: MT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 11/12/2019
-  ms.locfileid: "73969361"
+  ms.lasthandoff: 02/20/2020
+  ms.locfileid: "77504016"
 items:
 - durationInMinutes: 1
   content: >
@@ -192,7 +192,7 @@ items:
   content: >
     L'ultimo esempio dimostra che la divisione di interi tronca il risultato.
 
-    È possibile ottenere il **resto** usando l'operatore **modulo**, ovvero il carattere `%`:
+    È possibile ottenere il **resto** usando l'operatore **resto** , il carattere `%`:
 
 
     ```csharp
