--- a/docs/spark/index.yml
+++ b/docs/spark/index.yml
@@ -11,26 +11,30 @@ metadata:
   author: mamccrea
   ms.author: mamccrea
   ms.date: 09/11/2019
-  ms.openlocfilehash: bce56c20e30df1f6eb6d6be5edb7ea766a783d83
-  ms.sourcegitcommit: 8b8dd14dde727026fd0b6ead1ec1df2e9d747a48
+  ms.openlocfilehash: b75740fa84fd7c6fa383129075a082c4ea2ccdcc
+  ms.sourcegitcommit: 771c554c84ba38cbd4ac0578324ec4cfc979cf2e
   ms.translationtype: MT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 09/27/2019
-  ms.locfileid: "71332569"
+  ms.lasthandoff: 02/21/2020
+  ms.locfileid: "77542806"
 landingContent:
 - title: Informazioni su .NET per Apache Spark
   linkLists:
+  - linkListType: whats-new
+    links:
+    - text: Documentazione delle novità di .NET
+      url: /dotnet/whats-new/index
   - linkListType: overview
     links:
     - text: Che cos'è .NET per Apache Spark?
       url: what-is-apache-spark-dotnet.md
   - linkListType: reference
     links:
-    - text: Riferimento API
+    - text: Informazioni di riferimento sulle API
       url: /dotnet/api/?view=spark-dotnet
     - text: GitHub
       url: https://github.com/dotnet/spark
-- title: Attività iniziali
+- title: Introduzione
   linkLists:
   - linkListType: tutorial
     links:
