--- a/docs/framework/winforms/controls/toc.yml
+++ b/docs/framework/winforms/controls/toc.yml
@@ -1,4 +1,4 @@
-- name: Controlli Windows Forms
+- name: Controlli Windows Form
   href: index.md
   items:
     - name: Disporre i controlli in Windows Forms
@@ -1171,7 +1171,7 @@
               href: how-to-make-thread-safe-calls-to-windows-forms-controls.md
             - name: 'Procedura: Usare un thread in background per la ricerca di file'
               href: how-to-use-a-background-thread-to-search-for-files.md
-    - name: Controlli Windows Forms in .NET Framework per funzione
+    - name: Controlli Windows Form in .NET Framework per funzione
       href: windows-forms-controls-by-function.md
     - name: Sviluppare controlli in fase di progettazione
       items:
@@ -1182,7 +1182,7 @@
         - name: 'Procedura dettagliata: Ereditare da un controllo'
           href: walkthrough-inheriting-from-a-windows-forms-control-with-visual-csharp.md
         - name: 'Procedura dettagliata: Eseguire attività comuni usando gli smart tag'
-          href: performing-common-tasks-using-smart-tags-on-wf-controls.md
+          href: perform-common-tasks-design-actions.md
         - name: 'Procedura dettagliata: Serializzare raccolte di tipi standard'
           href: serializing-collections-designerserializationvisibilityattribute.md
         - name: 'Procedura dettagliata: Debug di controlli personalizzati'
