--- a/docs/csharp/toc.yml
+++ b/docs/csharp/toc.yml
@@ -1337,8 +1337,9 @@
                 - name: Tipi di enumerazione
                   href: language-reference/builtin-types/enum.md
                   displayName: 'enum, bit flags, bit field'
-                - name: struct
-                  href: language-reference/keywords/struct.md
+                - name: Tipi di struttura
+                  href: language-reference/builtin-types/struct.md
+                  displayName: struct type
                 - name: Tipi valore nullable
                   href: language-reference/builtin-types/nullable-value-types.md
                   displayName: '? token, ? symbol'
